feat: Update .gitignore for Serena
Add `.serena/` to the `.gitignore` file.

--- a/.gitignore
+++ b/.gitignore
@@ -217,4 +217,7 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+# Serena
+.serena/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,android,androidstudio,kotlin
