refactor: Create Android Compose convention plugin
Creates a new convention plugin, `cryptobook.android.library.compose`, to centralize the configuration for Jetpack Compose in Android library modules.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -81,3 +81,4 @@ kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", vers
 # Plugins defined by this project
 cryptobook-android-library = { id = "cryptobook.android.library" }
 cryptobook-hilt = { id = "cryptobook.hilt" }
+cryptobook-android-library-compose = { id = "cryptobook.android.library.compose" }
