feat(coin-detail): implement presentation layer with MVI pattern
  - Add CoinDetailContract with UiState, Event, SideEffect
  - Implement CoinDetailViewModel with AssistedInject for symbol parameter
  - Create CoinDetailScreen with loading/error/content states
  - Connect navigation from Home to CoinDetail
  - Use NavigationHelper and MessageHelper instead of SideEffect pattern

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ coroutines = "1.10.2"
 navigation3 = "1.0.0"
 spotless = "6.25.0"
 materialVersion = "1.13.0"
+uiGraphics = "1.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -88,6 +89,7 @@ ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devto
 room-gradlePlugin = { group = "androidx.room", name = "room-gradle-plugin", version.ref = "room" }
 spotless-gradlePlugin = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
 material = { group = "com.google.android.material", name = "material", version.ref = "materialVersion" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
 
 
 [plugins]
